--- a/intro.html
+++ b/intro.html
@@ -741,7 +741,7 @@ By Robert Haase
   
   <div class="footer-item">
     <p class="last-updated">
-Last updated on None.<br>
+Last updated on 2023-11-26.<br>
 </p>
   </div>
   
